Kipi-plugins 1.7.0 - Release date: 2010/??/??
------------------------------------------------------------------------

NEW FEATURES:


BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 






